in-action/redis-cluster/redis-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: redis
spec:
  ports:
    - name: redis-port
      port: 6379
  clusterIP: None
  selector:
    app: redis
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-stateful-set
  labels:
      app: redis
spec:
  replicas: 6
  selector:
    matchLabels:
      app: redis
  serviceName: redis-service
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-config-map
              mountPath: /conf
            - name: redis-data
              mountPath: /var/lib/redis
          command:
            - bash
            - "-c"
            - |
              set -ex
              mkdir -p /var/lib/redis
              redis-server /conf/redis.conf
      volumes:
        - name: redis-config-map
          configMap:
            name: redis-config-map
            defaultMode: 0755
            items:
              - key: redis-conf
                path: redis.conf
  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        storageClassName: rook-ceph-block
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
